Closed Bug 1435618 Opened 6 years ago Closed 6 years ago

Windows QR debug jobs are all broken with crashes

Categories

(Core :: Graphics: WebRender, defect, P1)

Other Branch
defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: kats, Assigned: emilio)

References

Details

Attachments

(1 file)

FYI to sheriffs so they stop starring these failures with random other bugs.
Flags: needinfo?(ncsoregi)
Flags: needinfo?(nbeleuzu)
Flags: needinfo?(csabou)
Flags: needinfo?(cbrindusan)
Flags: needinfo?(aryx.bugmail)
Flags: needinfo?(ncsoregi)
This is trivial to fix, it's perma-leaking a reference to the gfx info service.
Assignee: nobody → emilio
Comment on attachment 8948265 [details]
Bug 1435618: Don't leak a reference to the gfx info.

https://reviewboard.mozilla.org/r/217764/#review223516

Patch looks fine but I'm not sure how a leak would cause the crash that we were seeing.
Attachment #8948265 - Flags: review?(bugmail) → review+
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #5)
> Comment on attachment 8948265 [details]
> Bug 1435618: Don't leak a reference to the gfx info.
> 
> https://reviewboard.mozilla.org/r/217764/#review223516
> 
> Patch looks fine but I'm not sure how a leak would cause the crash that we
> were seeing.

The already_AddRefed destructor asserts on debug builds.
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/fed46d84d30d
Don't leak a reference to the gfx info. r=kats
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/7c090dc7f018
followup: Add missing include to unbust windows. r=me
Flags: needinfo?(nbeleuzu)
Flags: needinfo?(csabou)
Flags: needinfo?(cbrindusan)
https://hg.mozilla.org/mozilla-central/rev/fed46d84d30d
https://hg.mozilla.org/mozilla-central/rev/7c090dc7f018
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: