Bug 1435618: Don't leak a reference to the gfx info. r=kats

GetGfxInfo returns an already_AddRefed, you can't just forget about its return
value.

MozReview-Commit-ID: Ia6pyJN9njf

--HG--
extra : rebase_source : 73f7f1a6a8093d6f6555fa11f784bf912e1ab616