gfx/ipc/GPUParent.cpp
@@ -192,7 +192,9 @@ GPUParent::RecvInit(nsTArray<GfxPrefSetting>&& prefs,
   }
   if (gfxVars::UseWebRender()) {
     // Ensure to initialize GfxInfo
-    services::GetGfxInfo();
+    nsCOMPtr<nsIGfxInfo> gfxInfo = services::GetGfxInfo();
+    Unused << gfxInfo;
+
     Factory::EnsureDWriteFactory();
   }
 #endif
